--- a/src/_1_modules/systemSwitch/systemSwitch.scss
+++ b/src/_1_modules/systemSwitch/systemSwitch.scss
@@ -7,6 +7,10 @@
 		display: none;
 	}
 
+	.lt-ie10 & {
+		float: right;
+	}
+
 	&__fieldset {
 		border: 0;
 		padding: 0;
