--- a/src/_1_modules/tabs/tabs.scss
+++ b/src/_1_modules/tabs/tabs.scss
@@ -26,6 +26,6 @@
 	}
 
 	.no-flexbox & {
-		width: 780px;
+		width: 679px;
 	}
 }
